@@ -9,13 +9,13 @@ import com.javacore.task.exceptions.ApiException;
 import com.javacore.task.exceptions.UserNotFoundException;
 import com.javacore.task.mappers.TraineeMapper;
 import com.javacore.task.mappers.TrainingMapper;
-import com.javacore.task.models.*;
-import com.javacore.task.models.response.TraineeProfileUpdateResponse;
+import com.javacore.task.models.response.TraineeInfoResponse;
+import com.javacore.task.models.TraineeModel;
 import com.javacore.task.models.request.TraineeTrainingsRequest;
 import com.javacore.task.models.request.TraineeUpdateRequest;
-import com.javacore.task.models.response.TraineeInfoResponse;
-import com.javacore.task.models.response.TrainersListResponse;
+import com.javacore.task.models.response.TraineeProfileUpdateResponse;
 import com.javacore.task.models.response.TraineeTrainingInfoResponse;
+import com.javacore.task.models.response.TrainersListResponse;
 import com.javacore.task.repositories.TraineeRepository;
 import com.javacore.task.repositories.TrainerRepository;
 import com.javacore.task.repositories.TrainingRepository;
@@ -29,7 +29,7 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 
 @Slf4j
@@ -48,6 +48,7 @@ public class TraineeServiceImpl implements TraineeService {
     public TraineeModel getTraineeById(Long traineeId) {
         Trainee trainee = traineeRepository.findById(traineeId).orElseThrow(
                 () -> new UserNotFoundException(String.format("Trainee with id: %d not found", traineeId)));
+        log.info("Retrieved Trainee by id: {}, Trainee: {}", traineeId, trainee);
         if(trainee != null) {
             return traineeMapper.traineeToTraineeModel(trainee);
         } else {
@@ -59,8 +60,8 @@ public class TraineeServiceImpl implements TraineeService {
     @Override
     public TraineeProfileUpdateResponse updateTrainee(TraineeUpdateRequest request) {
 
-            Trainee existingTrainee = traineeRepository.findTraineeByUserUsername(request.userName()).orElseThrow(
-                    () -> new UserNotFoundException(String.format("Trainee with username: %s not found", request.userName())));
+            Trainee existingTrainee = traineeRepository.findTraineeByUserUsername(request.getUserName()).orElseThrow(
+                    () -> new UserNotFoundException(String.format("Trainee with username: %s not found", request.getUserName())));
 
             Trainee trainee = traineeMapper.update(request, existingTrainee);
             traineeRepository.save(trainee);
@@ -77,18 +78,17 @@ public class TraineeServiceImpl implements TraineeService {
                     () -> new UserNotFoundException(String.format("Trainee with username: %s not found", username)));
             traineeRepository.deleteById(trainee.getTraineeId());
             log.info("Trainee deleted with id: {}", trainee.getTraineeId());
-
     }
 
-        @Override
-        public TraineeInfoResponse findTraineeProfileByUsername(String username) {
-            Trainee trainee = traineeRepository.findTraineeByUserUsername(username).orElseThrow(()->{
-                log.warn("Response: Trainee not found");
-                throw  new UserNotFoundException("Trainee not found");
-            });
-            log.info("Retrieved Trainee profile by username: {}, Trainee: {}", username, trainee);
-            return traineeMapper.traineeInfoResponse(trainee);
-        }
+    @Override
+    public TraineeInfoResponse findTraineeProfileByUsername(String username) {
+        Trainee trainee = traineeRepository.findTraineeByUserUsername(username).orElseThrow(()->{
+            log.warn("Response: Trainee not found");
+            throw  new UserNotFoundException("Trainee not found");
+        });
+        log.info("Retrieved Trainee profile by username: {}, Trainee: {}", username, trainee);
+        return traineeMapper.traineeInfoResponse(trainee);
+    }
 
 
     @Transactional
@@ -119,7 +119,7 @@ public class TraineeServiceImpl implements TraineeService {
     public List<TrainersListResponse> updateTraineeTrainersList(String username, List<String> trainersUsernames) {
          Trainee trainee = traineeRepository.findTraineeByUserUsername(username).orElseThrow(()->{
              log.warn("Response: Trainee not found");
-             throw  new UserNotFoundException("Trainee not found");
+             return new UserNotFoundException("Trainee not found");
          });
          List<Trainer> trainers = traineeRepository.getNotAssignedTrainers(trainee.getUser().getUsername());
          List<Trainer> addedTrainers= trainerRepository.findTrainersByUserUserName(trainersUsernames);
@@ -153,7 +153,7 @@ public class TraineeServiceImpl implements TraineeService {
                          trainer.getUser().getFirstName(),
                          trainer.getUser().getLastName(),
                          trainer.getSpecialization().getTrainingType().name()
-                 )).distinct().collect(Collectors.toList());
+                 )).distinct().toList();
         }
 
     @Override
@@ -169,10 +169,11 @@ public class TraineeServiceImpl implements TraineeService {
 
     @Override
     public List<TraineeTrainingInfoResponse> getTraineeTrainingsByCriteria(TraineeTrainingsRequest request) {
+
         log.info("Retrieving Trainee Trainings by : Criteria: {}", request);
-        if (traineeRepository.existsByUserUsername(request.traineeName())) {
-            List<Training> trainings = traineeRepository.getTraineeTrainingsByCriteria(request.traineeName(),
-                    request.periodFrom(), request.periodTo(), request.trainerName(), TrainingTypes.valueOf(request.trainingType())).orElseThrow(
+        if (traineeRepository.existsByUserUsername(request.getTraineeName())) {
+            List<Training> trainings = traineeRepository.getTraineeTrainingsByCriteria(request.getTraineeName(),
+                    request.getPeriodFrom(), request.getPeriodTo(), request.getTrainerName(), TrainingTypes.valueOf(request.getTrainingType())).orElseThrow(
                     () -> new UserNotFoundException("Data not found"));
 
             log.info("Retrieved Trainee Trainings by : Criteria: {}, Trainings: {}", request, trainings);
